# Proxima

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
proxima/: __init__.py  config.py  core.py  explanation.py  grad_utils.py  hessian_vector.py  hinge.py  influence_analysis.py  metric_learning.py  proxy_model.py  tabular.py  utils.py
proxima/results/: COMPASS_results.csv  COMPASS_samples.csv  GermanCredit_results.csv  GermanCredit_samples.csv  LendingClub_results.csv  LendingClub_samples.csv  adult_results.csv  adult_samples.csv
